	  a PDF file along with the AUTHOR meta data (if any).
	- No longer embed the prolog.ps command header when
	  PostScript commands are not being embedded in the
	  output.

    BUG FIXES

	- Squeezed tables were not centered or right-aligned
	  properly.
	- Cells didn't align properly if they were the first
	  things on the page, or if there were several
	  intervening empty cells.
	- Remote URLs didn't always resolve properly (like the
	  images from the Google web page...)


CHANGES IN HTMLDOC v1.8.18

    NEW FEATURES

	- Added support for remote HTML title pages.

    CHANGES

	- Now accept all JPEG files, even if they don't start
	  with an APPn marker.
	- Now only start a new page for a chapter/filter if we
	  aren't already at the top of a page.

    BUG FIXES

	- ROWSPAN handling in tables has been updated to match
	  the MSIE behavior, where the current rowspan is
	  reduced by the minimum rowspan in the table; that is,
	  if you use "ROWSPAN=17" for all cells in a row,
	  HTMLDOC now treats this as if you did not use ROWSPAN
	  at all.  It is unclear if this is what the W3C
	  intends.
	- The "--webpage" option didn't force toc levels to 0,
	  which caused a bad page object reference to be
	  inserted in the PDF output file.
	- Background colors in nested tables didn't always get
	  drawn in the right order, resulting in the wrong
	  colors showing through.
	- The HEADER page comment didn't set the correct top
	  position in landscape orientation.


CHANGES IN HTMLDOC v1.8.17

    NEW FEATURES

	- Improved table-of-contents generation, with chapter
	  headings at the top of new TOC pages and page numbers
	  based on the header/footer string.
	- Added new "--no-localfiles" option to disable access
	  to local files for added security in web services.
	- Long lines in book files can not be broken up using
	  a trailing backslash.
	- Added a modern "skin" to the GUI interface.

    CHANGES

	- Made some changes in how COLSPAN and ROWSPAN are