@@ -22,6 +22,9 @@ CHANGES IN HTMLDOC v1.8.19
 	- Cells didn't align properly if they were the first
 	  things on the page, or if there were several
 	  intervening empty cells.
+	- The preferred cell width handling didn't account for
+	  the minimum cell width, which could cause some tables
+	  to become too large.
 	- Remote URLs didn't always resolve properly (like the
 	  images from the Google web page...)
 
